--- a/scanner/src/main/res/layout/layout.xml
+++ b/scanner/src/main/res/layout/layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
+    <leitor.universal.scanner.ScannerViewAnimator
         android:id="@+id/image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -17,11 +17,11 @@
         android:contentDescription="@string/content_description_mascara"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintWidth_percent="0.9" />
 
     <View
         android:id="@+id/mascara_top"
